# comfyui-photoshoot-with-gemma

./: Dockerfile  README.md  workflow.json
LanPaint/: .gitignore  MANIFEST.in  README.md  __init__.py
LanPaint/.github/: ISSUE_TEMPLATE.md
LanPaint/.github/workflows/: build-pipeline.yml  validate.yml
LanPaint/example_workflows/: Flux2_Klein_inpainting.json  Flux_Inpaint.json  Masked_Qwen_Image_Edit.json  Qwen_Image_Inpaint.json  Z_image_Inpaint.json  Z_image_base_Inpaint.json
LanPaint/src/LanPaint/: utils.py
LanPaint/tests/: pytest.ini  test_lanpaint_semantic_stop.py  test_reshape_mask.py  test_sho_regression.py
LanPaint/web/: lanpaint_info.js
custom_nodes/LanPaint/: .tracking  pyproject.toml
custom_nodes/LanPaint/.github/workflows/: publish_action.yml
custom_nodes/LanPaint/example_workflows/: Flux.2.Dev_Inpaint.json  Hunyuan_Inpaint.json  Masked_Qwen_Image_Edit_2509.json  Qwen_Image_Outpaint.json  SDXL_Inpaint.json  wan2_2_T2I_Inpaint.json  wan2_2_T2I_Partial_Inpaint.json
custom_nodes/LanPaint/src/LanPaint/: earlystop.py  lanpaint.py  nodes.py  types.py
custom_nodes/LanPaint/tests/: __init__.py  test_LanPaint.py
